<resources>
    <string name="app_name">WiSunProject</string>
    <string name="google_android_map_api_key"> AIzaSyDxljZ7mM4y8fpi4jbErub11et5_e0Rp18 </string>
    <string name="block_plan">BlockPlan</string>
    <string name="reached">Reached</string>
    <string name="floor_plan">FloorPlan</string>
    <string name="done">Done</string>

    <string name="action_settings">Settings</string>

    <string name="map_prompt">Choose a map</string>
    <string name="server_address">Server Address:</string>
    <string name="hint_IP_Address">e.g. 192.168.1.1</string>
    <string name="server_port">Server Port:</string>
    <string name="hint_server_port">e.g. 8001</string>
    <string name="map_display">Map Display:</string>
    <string name="save">Save</string>

    <string-array name="map_arrays">
        <item>Standard</item>
        <item>Silver</item>
        <item>Retro</item>
        <item>Dark</item>
        <item>Night</item>
        <item>Aubergine</item>
    </string-array>
</resources>
